# pentagame

./: .gitignore  Cargo.toml  Makefile  README.md  notes.md
migrations/2021-02-06-210907_basic_layout/: down.sql  up.sql
migrations/2021-02-08-083309_add-game-states/: up.sql
scripts/: ci.sh  compile.sh  diesel.sh  full-setup.sh  package.sh
src/: auth.rs  build.rs  config.rs  frontend.rs  graph.rs  main.rs  schema.rs  server.rs  state.rs  ws.rs
src/db/: actions.rs  models.rs  schema.rs
src/frontend/: README.md  errors.rs  forms.rs  helper.rs  routes.rs  templates.rs
src/graph/: errors.rs  graph.rs  models.rs
src/ws/: README.md  actor.rs  errors.rs  messages.rs  models.rs  routes.rs  session.rs
static/: .gitignore  REAME.md  package-lock.json  package.json  purgecss.config.js  webpack.config.js  webpack.prod.config.js
static/scss/: color.scss  layout.scss  main.scss  variables.scss
static/ts/: game.ts  main.ts  overview.ts  settings.ts  utils.ts
static/ts/interfaces/: requests.ts  responses.ts
static/ts/old/: game.js  pentagame.js
static/ts/pentamath/: interfaces.ts  math.ts  models.ts  utils.ts
templates/: base.html  error.html  index.html  robots.txt
templates/content/: cookies.html  rules.html
templates/games/: create.html  game.html  overview.html  pin.html  view.html
