[package]
name = "pentagame-online"
version = "0.1.0"
authors = ["Chaostheorie <chaosthe0rie@pm.me>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "*", default-features = false }
actix-identity = "*"
actix-web = { version = "3", default-features = false, features = ["compress", "secure-cookies"] }
actix-web-actors = "*"
actix-web-static-files = "3.0"
askama = { version = "*", default-features = false, features = ["mime", "mime_guess"] }
askama_actix = "*"
uuid = { version = "*", features = ["v4", "serde"] }
clap = "*"
dashmap = { version = "*", features = ["serde", "rayon"] }
derive_more = "0.99.0"
rand = "*"
toml = "*"
serde = "*"
futures = "*"
cached = "*"
serde_json = "*"
diesel = { version = "*", default-features = false, features = ["postgres"] }
priority-queue = "*"
ansi_term = "*"
rayon = "*"
argon2rs = "*"
lazy_static = "*"

[build-dependencies]
actix-web-static-files = "3.0"
